@@ -16,6 +16,7 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -83,7 +84,7 @@ public class MicrosoftGraphService {
                 .top(50)
                 .get();
 
-        return eventCollectionPage == null ? List.of() : eventCollectionPage.getCurrentPage();
+        return eventCollectionPage == null ? Collections.emptyList() : eventCollectionPage.getCurrentPage();
     }
 
     public static List<Event> filterDeclinedEvents(List<Event> eventList) {
